test/error/E15.chigfn
{
	"type": "function",
	"name": "helloworld",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
			"type": "notexecordata"
		}
	],
	"local_variables": {}
}
